<resources>
    <string name="app_name">MSX Quiz</string>
    <string name="back">Back</string>
    <string name="MSX_quiz_logo">MSX Quiz Logo</string>


    <!--Main fragment-->
    <string name="main_logo">MSX BASIC version 2.1\nCopyright 1986 by Microsoft\n\nDisk BASIC version 1.0\nOk</string>
    <string name="play">Play</string>
    <string name="ranking">Ranking</string>
    <string name="Settings">Settings</string>


    <!--Quiz fragment-->
    <string name="points"> Points: </string>
    <string name="attempts"> Attempts: </string>
    <string name="author">Author:</string>
    <string name="We_had_trouble_getting_the_list_of_questions_please_try_again">We had trouble getting the list of questions, please try again</string>

    <!--Fragment ranking-->
    <string name="see_table_of_records_on_the_internet">See table of records on the internet:</string>
    <string name="upload_your_score_to_quiz_tipolisto_es_nyou_will_need_to_be_registered">Upload your score to quiz.tipolisto.es\nyou will need to be registered</string>
    <string name="route_register">https://quiz.tipolisto.es/index/Auth/register</string>
    <string name="route_show_all_quizs">https://quiz.tipolisto.es/index/Score/showAll</string>
    <string name="upload">Upload</string>


    <!--Score fragment-->
    <string name="your_score">Your score</string>
    <string name="your_user">Your user</string>
    <string name="ok">Ok</string>


    <!--Settings fragment-->
    <string name="settings">Settings</string>
    <string name="music_on_off">Music on/off</string>
    <string name="theme_dark_on_off">Theme dark on/off</string>
    <string name="web">Web</string>
    <string name="route_quiz">https://quiz.tipolisto.es/</string>
    <string name="contact_more_information">Contact / more information</string>
    <string name="route_contact">https://quiz.tipolisto.es/index/About</string>
    <string name="route_forum">https://quiz.tipolisto.es/index/Forum</string>
    <string name="forum">forum</string>

    <!--loginInternetFragment-->
    <string name="the_user_name_does_not_exist">The username does not exist.</string>
    <string name="New_record_saved_in_quiz_tiposto_es">New record saved in quiz.tiposto.es</string>
    <string name="The_user_s_password">The user password</string>
    <string name="is_incorrect">is incorrect</string>
    <string name="The_user_needs_to_be_validated_to_continue_go_to">The user needs to be validated to continue, go to</string>
    <string name="There_was_a_problem_with_the_database">There was a problem with the database</string>
    <string name="Another_saved_high_score_found">Another saved high score found</string>
    <string name="Enter_the_required_fields">Enter the required fields</string>

    <!--Quiz fragment-->
    <string name="Are_you_sure_you_want_to_finish_the_game">Are you sure you want to finish the game?</string>

    <!--Score fragment-->
    <string name="Please_write_a_name">Please write a name</string>

</resources>