<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.fragments.RankingFragment">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ivLogoScores"
            android:src="@drawable/logo_scores"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tvDescriptionLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/see_table_of_records_on_the_internet"
            app:layout_constraintTop_toBottomOf="@id/ivLogoScores"
            app:layout_constraintBottom_toTopOf="@id/tvLinkToRecords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tvLinkToRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"

            android:textAlignment="center"
            android:autoLink="all"
            android:text="@string/route_show_all_quizs"
            app:layout_constraintTop_toBottomOf="@id/tvDescriptionLink"
            app:layout_constraintBottom_toTopOf="@id/btSendMaxPoints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btSendMaxPoints"
            android:text="@string/upload_your_score_to_quiz_tipolisto_es_nyou_will_need_to_be_registered"
            app:layout_constraintTop_toBottomOf="@id/ivLogoScores"
            app:layout_constraintBottom_toTopOf="@id/rvRanking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/main_activity_buttons"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRanking"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/btSendMaxPoints"
            app:layout_constraintBottom_toTopOf="@id/tvWhiteBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tvWhiteBar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/rvRanking"
            app:layout_constraintBottom_toTopOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/button_back"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>