<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/balckground_main_acitivty"
        tools:context=".view.fragments.ScoreFragment">

        <LinearLayout
            android:id="@+id/llScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_score"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                tools:text="300"
                />

            <EditText
                android:id="@+id/etRankingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="name"
                android:textColor="@color/white"
                android:hint="@string/your_user"
                android:textCursorDrawable="@null"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:singleLine="true"
                android:maxLength="14"/>





        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llScore"
            android:visibility="gone"/>
        <Button
            android:id="@+id/buttonRanking"
            android:text="@string/ok"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressbar"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/button_back"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>