<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.QuizFragment">
        <LinearLayout
            android:id="@+id/linearLayoutPointsAndFails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N: "
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tvNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginHorizontal="5dp"
                tools:text="1522" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points" />
            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"

                android:layout_marginHorizontal="5dp"
                tools:text="1522" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attempts"
                />
            <TextView
                android:id="@+id/tvFails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="1522" />
        </LinearLayout>


        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:maxHeight="400dp"
            android:scaleType="fitCenter"
            android:src="@drawable/without_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutPointsAndFails"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            tools:text="30"
            android:gravity="center"
            android:textSize="35sp"
            android:textColor="@color/text_color_darker"
            app:layout_constraintTop_toBottomOf="@id/ivImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBarCircle"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminate="false"
            android:layoutDirection="rtl"
            android:max="30"
            android:progress="30"
            android:rotation="90"
            android:progressDrawable="@drawable/drawable_circle"
            app:layout_constraintTop_toTopOf="@id/tvTimer"
            app:layout_constraintBottom_toBottomOf="@id/tvTimer"
            app:layout_constraintStart_toStartOf="@id/tvTimer"
            app:layout_constraintEnd_toEndOf="@id/tvTimer"/>

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="¿blabla bla bla?"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvTimer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion"
            app:layout_constraintBottom_toTopOf="@id/llAuthor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAnswer1"
                android:tag="1"
                app:cornerRadius="5dp"
                app:strokeWidth="2dp"
                app:strokeColor="#A58C6A"
                tools:text="Dennis M. Ritchie"
                style="@style/button_answers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAnswer2"
                android:tag="2"
                app:cornerRadius="5dp"
                app:strokeWidth="2dp"
                app:strokeColor="#A58C6A"
                tools:text="Kike Madrigal"
                style="@style/button_answers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAnswer3"
                android:tag="3"
                app:cornerRadius="5dp"
                app:strokeWidth="2dp"
                app:strokeColor="#A58C6A"
                tools:text="Albert Einstein"
                style="@style/button_answers" />

        </LinearLayout>


         <LinearLayout
             android:id="@+id/llAuthor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@id/llButtons"
             app:layout_constraintBottom_toBottomOf="@id/btn_back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/author"
               />
             <TextView
                 android:id="@+id/tvAuthor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Juanitovalderama: "
               />
         </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:text="@string/back"
            app:layout_constraintTop_toBottomOf="@id/llAuthor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/button_back"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>